ezstyles.css
/* ... */
body {
  margin: 0;
  /* background-color: #7e7e7e; */
  background-image: url('Assets/wastedWorldBackgroundBordersWhite.webp'); /* Path to your image */
  background-size: 100% auto; /* Stretch to full width, auto height */
  background-repeat: repeat-y; /* Repeat vertically */
  background-position: top center; /* Center horizontally */
}

.grid {
  /* Thank you Fireship.io */
  height: 100vh;
  display: grid;
  gap: 0.8rem 0;
  grid-template-areas:
    "a b c"
    "d M e"
    "f M g"
    "h i j";

  grid-template-rows: 3rem auto auto 3rem;
  grid-template-columns: auto 575px auto;
}

.card {
  display: flex;
  justify-content: center;
  align-items: center;
}

.card:nth-child(1) {
  grid-area: a;
  /*   background-color: aquamarine; */
}
.card:nth-child(2) {
  grid-area: b;
  padding-top: .5rem;
  /*   background-color: green; */
}
img {
  width: 100%;
  height: 100%;
  object-fit: scale-down;
}
.card:nth-child(3) {
  grid-area: c;
  /*   background-color: red; */
}
.card:nth-child(4) {
  grid-area: d;
  /*   background-color: brown; */
}
.card:nth-child(5) {
  grid-area: e;
  /*   background-color: rosybrown; */
}
.card:nth-child(6) {
  grid-area: f;
  /*   background-color: violet; */
}
.card:nth-child(7) {
  grid-area: g;
  /*   background-color: darkgrey; */
}
.card:nth-child(8) {
  grid-area: h;
  background-color: black;
}
.card:nth-child(9) {
  grid-area: i;
  justify-content: center;
  align-content: center;
  background-color: black;
}
.card:nth-child(10) {
  grid-area: j;
  background-color: black;
}

.card:last-child {
  grid-area: M;
  background-color: white;
  /* height: auto; */
  display: grid;
  gap: 0.8rem 0;
  grid-template-columns: 1fr;
  grid-template-rows: 2rem max-content;
  align-items: start;
}

#tab {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2.8vmin;
  height: 100%;
  width: 100%;
  /*   background-color: burlywood; */
}
#btns {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2.8vmin;
  height: 100%;
  width: 100%;
  background-color: greenyellow;
}
#results {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2.8vmin;
  height: 100%;
  width: 100%;
  background-color: blue;
}

fieldset {
  height: 100%;
  width: 100%;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
  padding-block-start: 0em;
  padding-inline-start: 0em;
  padding-inline-end: 0em;
  padding-block-end: 0em;
  padding: 0;
}

.form-para {
  display: block;
  margin-block-start: 0em;
  margin-block-end: 0em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
}

.tab-options {
  background: black;
  border: transparent; /* 1px solid rgba(0, 0, 0, 0.1); */
  border-radius: 3px;
  display: grid;
  grid-template-columns: repeat(3, minmax(0, 1fr));
  padding-left: 5px;
  padding-right: 5px;
  box-sizing: border-box;
  align-items: center;
  transition: all 0.2s ease-in-out;
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
}

.tab-options label {
  background: transparent;
  /*   border: 1px solid transparent; */
  border-radius: 2px;
  display: inline-block;
  padding: 0;
  text-align: center;
  justify-content: center;
  /*   font-size: 3.2vmin; */
  transition: 0.2s all ease-in-out;
  width: 100%;
  font-weight: normal;
  color: whitesmoke;
  cursor: pointer;
}

.tab-options input[type="radio"] {
  display: none;
}

.tab-options label:hover {
  background: #99ca3c;
  opacity: 50%;
  color: #000000;
}

.tab-options input[type="radio"]:checked + label {
  background: #99ca3c;
  opacity: 100%;
  /*   border: 1px solid rgba(0, 0, 0, 0.1); */
  color: #000000;
}

#tab-toggle {
  user-select: none;
}

.old-glide {
  color: rgb(255, 255, 255);
  background-color: #000000;
  border: 0px solid rgba(1, 92, 24, 0.246);
  border-radius: 0px;
  padding: 0;
  /*   padding: 5px; */
  /*   margin: 0.1rem; */
  display: inline-block;
  font-size: 2.8vmin;
  /*   font-size: minMax(2.8vmin, 1rem); */
  letter-spacing: 1px;
  cursor: pointer;
  box-shadow: inset 0 0 0 0 #99ca3c;
  -webkit-transition: ease-out 0.4s;
  -moz-transition: ease-out 0.4s;
  transition: ease-out 0.4s;
  /*    flex-grow: 1; */
}
.old-glide:hover {
  box-shadow: inset 0 0 0 25px #99ca3c;
  color: rgb(0, 0, 0);
}

.glide-main {
  color: black;
  background-color: #99ca3c;
  border: 4px solid black;
  border-radius: 3px;
  padding: 0;
  /*   padding: 5px; */
  /*   margin: 0.1rem; */
  display: inline-block;
  font-size: 2.8vmin;
  font-size: minMax(2.8vmin, 1rem);
  /* letter-spacing: 1px; */
  cursor: pointer;
}

.glide-main:hover {
  filter: brightness(85%);
}

.glide-sml {
  color: rgb(255, 255, 255);
  background-color: #000000;
  border: 0px solid rgba(1, 92, 24, 0.246);
  border-radius: 0px;
  padding: 0;
  font-size: minMax(2.8vmin, 1rem);
  letter-spacing: 1px;
  cursor: pointer;
  box-shadow: inset 0 0 0 0 #99ca3c;
  -webkit-transition: ease-out 0.4s;
  -moz-transition: ease-out 0.4s;
  transition: ease-out 0.4s;
}

.glide-sml:hover {
  box-shadow: inset 0 0 0 25px #99ca3c;
  color: rgb(0, 0, 0);
}

#outer {
  display: flex;
  align-items: flex-start;
  flex-wrap: wrap;
  padding: 10px;
  /* position: relative; */
  /* width: 2em; */
  margin: 10px auto 0 auto;
  /* text-align: center; */
}

.wrapper {
  display: flex;
  align-items: flex-start;
  flex-wrap: wrap;
  position: relative;
  /*   width: 100%; */
  text-align: center;
  /* margin: 0.1rem; */
  padding: 0;
}

.select-btn {
  display: flex;
  align-items: center;
  cursor: pointer;
}
.select-btn {
  color: rgb(0, 0, 0);
  background-color: #99ca3c;
  /*   padding: 5px 5px; */
  display: flex;
  justify-content: center;
  align-content: center;
  font-size: 2.8vmin;
  cursor: pointer;
  box-shadow: inset 0 0 0 0 #99ca3c;
  -webkit-transition: ease-out 0.4s;
  -moz-transition: ease-out 0.4s;
  transition: ease-out 0.4s;
  width: 100%;
  height: 100%;
  /*   flex-grow: 1; */
}
/* ... */

